--- a/nvfetcher.toml
+++ b/nvfetcher.toml
@@ -1,7 +1,7 @@
-[aicommit2]
-src.github = "tak-bro/aicommit2"
-fetch.github = "tak-bro/aicommit2"
-
 [tinty]
 src.github = "tinted-theming/tinty"
 fetch.github = "tinted-theming/tinty"
+
+[mcp-hub]
+src.github = "ravitemer/mcp-hub"
+fetch.github = "ravitemer/mcp-hub"
